<resources>
    <string name="app_name">Me-Tris</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_ulangi">Ulangi Password</string>
    <string name="prompt_no_hp">Nomor Telepon</string>
    <string name="action_daftar">Daftar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email completions.</string>
    <string name="title_activity_lupa_password">ActivityLupaPassword</string>
    <string name="title_activity_daftar_akun">Daftar Akun</string>
    <string name="title_activity_authentication">Masuk dan Daftar</string>

    <string name="_0812345678">0812345678</string>
    <string name="masukkan_6_digit_kode">Masukkan 6 digit kode</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="tidak_menerima_kode">Tidak Menerima Kode?</string>
    <string name="tunggu_beberapa_menit_atau_telpon_saya">Tunggu Beberapa Menit atau Telpon saya</string>
    <string name="todo">TODO</string>

    <string name="title_activity_home">HomeActivity</string>

    <string name="nav_beranda">Beranda</string>
    <string name="nav_tripsaya">Trip Saya</string>
    <string name="nav_pakettrip">Paket Trip</string>
    <string name="nav_akunsaya">Akun</string>
    <string name="nav_lainnya">Lainnya</string>

    <string name="title_fragment_lainnya">Lainnya</string>
    <string name="title_activity_fragment_trip">FragmentTrip</string>
    <string name="tab_text_1">Trip Mendatang</string>
    <string name="tab_text_2">Trip Sebelumnya</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
