<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Silahkan Cek Handphone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            tools:text="Masukkan Kode Verifikasi yang dikirim ke nomor" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/logo_email"
                android:layout_width="wrap_content"
                android:layout_height="36dp"

                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/_0812345678"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="300px"

                app:srcCompat="@mipmap/ic_launcher"
                android:contentDescription="@string/todo" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginBottom="50px"
                android:layout_marginTop="5dp"
                android:background="@drawable/style_round_button"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/masukkan_6_digit_kode"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/next2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_round_button"
                android:text="@string/verifikasi"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/tidak_menerima_kode"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="@string/tunggu_beberapa_menit_atau_telpon_saya"
                android:textAlignment="viewStart"
                android:textColor="@android:color/black"
                android:textSize="16sp"  />
        </LinearLayout>

    </>
</android.support.constraint.ConstraintLayout>